--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
     return top;
   };
 </script>
+<script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
