--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
     return top;
   };
 </script>
-<script src="js/setup.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/setup-player.js"></script>
+<script src="js/change-player.js"></script>
+<script src="js/open-popap.js"></script>
+<script src="js/validation-form.js"></script>
+<script src="js/drag-popap.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
