--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <script src="js/utils.js"></script>
 <script src="js/setup-player.js"></script>
 <script src="js/change-player.js"></script>
-<script src="js/open-popap.js"></script>
+<script src="js/popap.js"></script>
 <script src="js/validation-form.js"></script>
 <script src="js/drag-popap.js"></script>
 <script src="js/stat.js"></script>
