Загрузка и отправка данных

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
   };
 </script>
 <script src="js/utils.js"></script>
+<script src="js/show-error.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/setup-player.js"></script>
 <script src="js/change-player.js"></script>
 <script src="js/popap.js"></script>
