модуль подбора похожих игроков

--- a/index.html
+++ b/index.html
@@ -206,11 +206,13 @@
     return top;
   };
 </script>
+<script src="js/debounce.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/show-error.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/setup-player.js"></script>
-<script src="js/change-player.js"></script>
+<script src="js/render.js"></script>
+<script src="js/wizard-setup.js"></script>
+<script src="js/similar.js"></script>
 <script src="js/popap.js"></script>
 <script src="js/validation-form.js"></script>
 <script src="js/drag-popap.js"></script>
