механизм загрузки аватарки

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 <script src="js/popap.js"></script>
 <script src="js/validation-form.js"></script>
 <script src="js/drag-popap.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
